Major architecture change, completed OVN layer implementation

--- a/layers/k8s-gateway/metadata.yaml
+++ b/layers/k8s-gateway/metadata.yaml
@@ -8,8 +8,8 @@ tags:
   # https://jujucharms.com/docs/stable/authors-charm-metadata
   - misc
 subordinate: false
-
 requires:
-  ovn-central-comms:
-    interface: ovn-central-comms
-
+  ovn-central-config:
+    interface: ovn-central-config
+  k8s-master-config:
+    interface: k8s-master-config
