--- a/layers/k8s-minion/layer.yaml
+++ b/layers/k8s-minion/layer.yaml
@@ -1,1 +1,2 @@
-includes: ['layer:basic', 'layer:openvswitch', 'interface:ovn-central-comms']  # if you use any interfaces, add them here
+includes: ['layer:basic', 'layer:openvswitch',
+              'interface:ovn-central-config', 'interface:k8s-master-config']  # if you use any interfaces, add them here
