--- a/layers/ovn-central/layer.yaml
+++ b/layers/ovn-central/layer.yaml
@@ -1,1 +1,1 @@
-includes: ['layer:basic', 'layer:openvswitch', 'interface:ovn-central-comms']  # if you use any interfaces, add them here
+includes: ['layer:basic', 'layer:openvswitch', 'interface:ovn-central-config']  # if you use any interfaces, add them here
