--- a/layers/ovn-central/metadata.yaml
+++ b/layers/ovn-central/metadata.yaml
@@ -9,5 +9,5 @@ tags:
   - misc
 subordinate: false
 provides:
-  ovn-central-comms:
-    interface: ovn-central-comms
+  ovn-central-config:
+    interface: ovn-central-config
