--- a/layers/k8s-master/layer.yaml
+++ b/layers/k8s-master/layer.yaml
@@ -1,2 +1,1 @@
-includes: ['layer:basic', 'layer:openvswitch',
-              'interface:ovn-central-config', 'interface:k8s-master-config']  # if you use any interfaces, add them here
+includes: ['layer:basic', 'layer:openvswitch', 'interface:ovn-central-config']  # if you use any interfaces, add them here
