--- a/bundles/kubernetes-ovn/bundle_example.yaml
+++ b/bundles/kubernetes-ovn/bundle_example.yaml
@@ -3,45 +3,37 @@ series: xenial
 applications:
 
   kubernetes-master:
-    charm: "cs:~containers/kubernetes-master-35"
+    charm: "cs:~containers/kubernetes-master-19"
     num_units: 1
     to:
       - "0"
     expose: true
-    options:
-      channel: 1.5/stable
 
   kubernetes-worker:
-    charm: "cs:~containers/kubernetes-worker-40"
+    charm: "cs:~containers/kubernetes-worker-23"
     num_units: 1
     to:
       - "1"
     expose: true
-    options:
-      channel: 1.5/stable
 
   ovn:
-    charm: "cs:~aakashkt/ovn-2"
+    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/ovn/"
     options:
       gateway-physical-interface: "ens4"
 
   etcd:
-    charm: "cs:~containers/etcd-40"
+    charm: "cs:etcd-34"
     num_units: 1
     to:
-      - "0"
+      - "2"
 
   easyrsa:
-    charm: "cs:~containers/easyrsa-12"
+    charm: "cs:~containers/easyrsa-9"
     num_units: 1
     to:
-      - "1"
+      - "2"
 
 relations:
-  - - "kubernetes-master:kube-api-endpoint"
-    - "kubernetes-worker:kube-api-endpoint"
-  - - "kubernetes-master:kube-control"
-    - "kubernetes-worker:kube-control"
   - - "kubernetes-master:cni"
     - "ovn:cni"
   - - "kubernetes-worker:cni"
@@ -54,9 +46,13 @@ relations:
     - "etcd:db"
   - - "kubernetes-master:certificates"
     - "easyrsa:client"
+  - - "kubernetes-master:kube-control"
+    - "kubernetes-worker:kube-control"
 
 machines:
   "0":
     series: xenial
   "1":
+    series: xenial
+  "2":
     series: xenial
