--- a/layers/ovn/metadata.yaml
+++ b/layers/ovn/metadata.yaml
@@ -1,4 +1,4 @@
-name: k8s-gateway
+name: ovn
 summary: <Fill in summary here>
 maintainer: Aakash <Aakash@localhost>
 description: |
@@ -7,4 +7,15 @@ tags:
   # Replace "misc" with one or more whitelisted tags from this list:
   # https://jujucharms.com/docs/stable/authors-charm-metadata
   - misc
-subordinate: false
+subordinate: true
+requires:
+  cni:
+    interface: kubernetes-cni
+    scope: container
+peers:
+  master-config:
+    interface: master-config
+
+series:
+  - xenial
+  - trusty
