--- a/bundles/kubernetes-ovn/bundle_example.yaml
+++ b/bundles/kubernetes-ovn/bundle_example.yaml
@@ -3,56 +3,34 @@ series: xenial
 applications:
 
   kubernetes-master:
-    charm: "cs:~containers/kubernetes-master-19"
+    charm: "cs:~aakashkt/kubernetes-master-0"
     num_units: 1
     to:
       - "0"
     expose: true
 
   kubernetes-worker:
-    charm: "cs:~containers/kubernetes-worker-23"
+    charm: "cs:~aakashkt/kubernetes-worker-0"
     num_units: 1
     to:
       - "1"
     expose: true
 
   ovn:
-    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/ovn/"
+    charm: "cs:~aakashkt/ovn-3"
     options:
       gateway-physical-interface: "ens4"
-
-  etcd:
-    charm: "cs:etcd-34"
-    num_units: 1
-    to:
-      - "2"
-
-  easyrsa:
-    charm: "cs:~containers/easyrsa-9"
-    num_units: 1
-    to:
-      - "2"
 
 relations:
   - - "kubernetes-master:cni"
     - "ovn:cni"
   - - "kubernetes-worker:cni"
     - "ovn:cni"
-  - - "etcd:certificates"
-    - "easyrsa:client"
-  - - "kubernetes-worker:certificates"
-    - "easyrsa:client"
-  - - "kubernetes-master:etcd"
-    - "etcd:db"
-  - - "kubernetes-master:certificates"
-    - "easyrsa:client"
-  - - "kubernetes-master:kube-control"
-    - "kubernetes-worker:kube-control"
+  - - "kubernetes-master:k8s-config"
+    - "kubernetes-worker:k8s-config"
 
 machines:
   "0":
     series: xenial
   "1":
-    series: xenial
-  "2":
     series: xenial
