--- a/bundles/kubernetes-ovn/bundle.yaml
+++ b/bundles/kubernetes-ovn/bundle.yaml
@@ -22,7 +22,7 @@ applications:
       channel: 1.5/stable
 
   ovn:
-    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/ovn"
+    charm: "cs:~aakashkt/ovn-6"
     options:
       gateway-physical-interface: "ens4"
 
@@ -39,7 +39,7 @@ applications:
       - "1"
 
 relations:
-  - - "ovn:kube-api-endpoint"
+  - - "kubernetes-master:kube-api-endpoint"
     - "kubernetes-worker:kube-api-endpoint"
   - - "kubernetes-master:kube-control"
     - "kubernetes-worker:kube-control"
