--- a/bundles/kubernetes-ovn/bundle_example.yaml
+++ b/bundles/kubernetes-ovn/bundle_example.yaml
@@ -3,21 +3,21 @@ series: xenial
 applications:
 
   kubernetes-master:
-    charm: "cs:~aakashkt/kubernetes-master-0"
+    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/kubernetes-master"
     num_units: 1
     to:
       - "0"
     expose: true
 
   kubernetes-worker:
-    charm: "cs:~aakashkt/kubernetes-worker-0"
+    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/kubernetes-worker"
     num_units: 1
     to:
       - "1"
     expose: true
 
   ovn:
-    charm: "cs:~aakashkt/ovn-3"
+    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/ovn"
     options:
       gateway-physical-interface: "ens4"
 
