Final setup added as reactive handlers

--- a/bundles/kubernetes-ovn/bundle.yaml
+++ b/bundles/kubernetes-ovn/bundle.yaml
@@ -22,7 +22,7 @@ applications:
       channel: 1.5/stable
 
   ovn:
-    charm: "cs:~aakashkt/ovn-11"
+    charm: "/home/aakash/Desktop/ovn-kubernetes-charm/xenial/ovn"
     options:
       gateway-physical-interface: "none"
 
