--- a/layers/ovn/layer.yaml
+++ b/layers/ovn/layer.yaml
@@ -1,2 +1,2 @@
-includes: ['layer:basic', 'layer:openvswitch',
-              'interface:kubernetes-cni', 'interface:master-config']  # if you use any interfaces, add them here
+includes: ['layer:basic', 'layer:openvswitch', 'layer:leadership'
+              'interface:kubernetes-cni']  # if you use any interfaces, add them here
