--- a/bundles/bundle.yaml
+++ b/bundles/bundle.yaml
@@ -2,6 +2,13 @@ series: xenial
 
 applications:
 
+  kubeapi-load-balancer:
+    charm: "cs:~containers/kubeapi-load-balancer-16"
+    expose: true
+    num_units: 1
+    to:
+      - "3"
+
   kubernetes-master:
     charm: "cs:~containers/kubernetes-master-35"
     num_units: 1
@@ -23,7 +30,7 @@ applications:
       channel: 1.5/stable
 
   ovn:
-    charm: "cs:~aakashkt/ovn-14"
+    charm: "cs:~aakashkt/ovn-16"
     options:
       gateway-physical-interface: "none"
 
@@ -40,6 +47,14 @@ applications:
       - "1"
 
 relations:
+  - - "kubernetes-master:kube-api-endpoint"
+    - "kubeapi-load-balancer:apiserver"
+  - - "kubernetes-master:loadbalancer"
+    - "kubeapi-load-balancer:loadbalancer"
+  - - "kubernetes-worker:kube-api-endpoint"
+    - "kubeapi-load-balancer:website"
+  - - "kubeapi-load-balancer:certificates"
+    - "easyrsa:client"
   - - "kubernetes-master:kube-api-endpoint"
     - "kubernetes-worker:kube-api-endpoint"
   - - "kubernetes-master:kube-control"
@@ -63,4 +78,6 @@ machines:
   "1":
     series: xenial
   "2":
+    series: xenial
+  "3":
     series: xenial
